--- a/argocd/dev/appset-dev.yaml
+++ b/argocd/dev/appset-dev.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       project: "default"
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: git@github.com:pcminh-landing-demo/gitops-artifacts.git
         targetRevision: HEAD
         path: 'charts/{{.path.basename}}'
         helm:
