fix - ApplicationSet template's helm.valueFiles add double ../../

--- a/argocd/dev/appset-dev.yaml
+++ b/argocd/dev/appset-dev.yaml
@@ -23,7 +23,7 @@ spec:
         path: 'charts/{{.path.basename}}'
         helm:
           valueFiles:
-            - '{{.path.path}}/values.yaml'
+            - '../../{{.path.path}}/values.yaml'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{.path.basename}}'
